--- a/W18-SENG-300-A2-G23/.classpath
+++ b/W18-SENG-300-A2-G23/.classpath
@@ -2,5 +2,18 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.core.contenttype-3.5.100.v20160418-1621.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.core.jobs-3.8.0.v20160509-0411.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.core.resources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.core.runtime-3.12.0.v20160606-1342.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.equinox.common-3.8.0.v20160509-1230.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.equinox.preferences-3.6.0.v20160120-1756.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.equinox.registry-3.6.100.v20160223-2218.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.jdt.core-3.13.100.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jomha/Desktop/SENG300-final/W18-SENG-300-A2-G23/jars/org.eclipse.osgi-3.11.0.v20160603-1336.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
